cleared div to align correctly gave text box solid border

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ textarea{
   border: none;
   resize: none;
   color: #000000;
-  border-left: 1px solid black;
+  border: 1px solid black;
   padding: 10px;
   height: 70px;
   
@@ -33,6 +33,7 @@ textarea{
 .time-block{
   text-align: center;
   border-radius: 15px;
+  
 }
 
 .row {
